# tk-readme-generator

./: LICENSE  README.md  action.yml  generator_config.py  generator_general.py  pyproject.toml  requirements.txt  tk-readme-generator.py  utils.py
.github/workflow-templates/: update-config-readme.properties.json  update-config-readme.yml  update-general-readme.yml  update-readme.yml
.github/workflows/: update-readme.properties.json  update-readme.yml
