[project]
name = "tk-readme-generator"
description = "CLI README.md generator for ShotGrid frameworks/engines/apps."
version = "1.0.0"
dependencies = [
  "pyyaml",
]
requires-python = ">=3.4"
authors = [
  {name = "Max de Groot", email = "max@maximumfx.nl"},
]
readme = "README.md"
keywords = ["shotgrid", "shotgun", "readme", "cli"]

[project.urls]
Repository = "https://github.com/MaximumFX/tk-readme-generator.git"
Issues = "https://github.com/MaximumFX/tk-readme-generator/issues"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
extend-select = [
    "B",
    "BLE",
    "C4",
    "ERA",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PGH",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TCH",
    "TID",
    "YTT",
]
show-fixes = true
target-version = "py39"